# chunkdup

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
chunkdup/: blueprint.py  chunkdiff.py  chunkdup.py  diff.py  diffbar.py  differ.py  dire.py  index.py  sums.py  utils.py
findup/: findup.py
