[tool.poetry]
name = "chunkdup"
version = "0.2.0"
description = "Find (partial content) duplicate files."
authors = ["Xie Yanbo <xieyanbo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xyb/chunkdup"
repository = "https://github.com/xyb/chunkdup"
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/xyb/chunkdup/issues"

[tool.poetry.scripts]
chunkdup = 'chunkdup.chunkdup:main'

[tool.poetry.dependencies]
python = "^3.7"
chunksum = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
